<resources>
  <string name="app_name">Lutra Legally Distinct Pocket Monster Arena</string>

  <string name="welcome">Welcome!</string>
  <string name="battle">Battle</string>
  <string name="capture_monster">Capture Monster</string>
  <string name="view_monster">View Monsters</string>
  <string name="logout">Logout</string>
  <string name="enemy_monster_image">Enemy Monster Image</string>
  <string name="regular_attack">REGULAR ATTACK</string>
  <string name="normal_attack">NORMAL ATTACK</string>
  <string name="switch_monster">SWITCH MONSTER</string>
  <string name="run_away">RUN AWAY!</string>
  <string name="Welcome">Welcome</string>
  <string name="edit_monsters">Edit monsters</string>
  <string name="Edit_monster">Edit Monster</string>
  <string name="Create_monster">Create Monster</string>
  <string name="Edit_monsters">Edit Monsters</string>

  <string name="edit_users">Edit Users</string>
  <string name="create_user">Create User</string>
  <string name="Logout">Logout</string>
  <string name="button">Button</string>
  <string name="Battle">Battle</string>
  <string name="my_monsters">My Monsters</string>

  <string name="choose_monster">Choose Your Monster</string>
  <string name="Normal">Normal</string>
  <string name="electric">Electric</string>
  <string name="fire">Fire</string>
  <string name="grass">Grass</string>
  <string name="water">Water</string>
  <string name="enter_a_nickname">Enter a nickname</string>
  <string name="welcome_n_login">Welcome \n Login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="choosemonsteractivity">ChooseMonsterActivity</string>
  <string name="preference_file_key">daclinkPreferenceFileName</string>
  <string name="preference_userId_key">daclinkPreferenceUserIdKey</string>
  <string name="monster_image">Monster Image</string>

  <string name="sign_up">Sign Up</string>
  <string name="welcome_n_sign_up">Welcome\nSign Up</string>


  <string name="view_label_type_health_attack_defense">🌈 Type:\n❤️ Health:\n🗡️ Attack:\n🛡️ Defense:</string>
  <string name="view_label_type_health_attack_defense_owner">🌈 Type:\n❤️ Health:\n🗡️ Attack:\n🛡️ Defense:\n👤 Owner:</string>
  <string name="back_to_lobby">Back to Lobby</string>
  <string name="lobby_activity">Lobby Activity</string>
  <string name="battle_activity">Battle Activity</string>
  <string name="admin_lobby_activity">Admin Lobby Activity</string>
  <string name="view_monsters">View Monsters</string>
  <string name="choose_monster_activity">Choose Monster Activity</string>
  <string name="capture_activity">Capture Activity</string>
  <string name="EDit_monsters">Edit Monsters</string>
  <string name="edit_Monsters">Edit Monsters</string>
  <string name="select_a_type_of_monster">Select a type of Monster</string>
  <string name="set_the_stats_of_the_monster">Set the stats of the Monster</string>
  <string name="label_admin_health_range">❤️ Health (%d - %d):</string>
  <string name="label_admin_attack_range">🗡️ Attack (%d - %d):</string>
  <string name="label_admin_defense_range">🛡 Defense (%d - %d):</string>
  <string name="label_admin_owner">👤 Owner:</string>
  <string name="enter_nickname">Enter Nickname</string>
  <string name="enter_health">Enter Health</string>
  <string name="enter_attack">Enter Attack</string>
  <string name="enter_defense">Enter Defense</string>
  <string name="label_admin_nickname">📛 Nickname:</string>
  <string name="back_to_monster_types">Back to Monster Types</string>
  <string name="save">Save</string>
  <string name="select_a_monster_to_edit">Select a Monster to Edit</string>
  <string name="create_monsters">Create Monsters</string>
  <string name="welcome_s">Welcome, %s!</string>

</resources>