<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">

    <ImageView
        android:id="@+id/enemyMonsterImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/enemy_monster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <ImageView
        android:id="@+id/userMonsterImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:scaleX="-1"
        android:contentDescription="@string/enemy_monster_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enemyMonsterName"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/enemyMonsterName"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:text="EnemyMonsterName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/enemyMonsterImage"
        app:layout_constraintTop_toTopOf="@id/enemyMonsterImage"
        android:gravity="end"
        />

    <TextView
        android:id="@+id/userMonsterName"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="UserMonsterName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/userMonsterHP"
        app:layout_constraintStart_toStartOf="@id/userMonsterHP"
        android:gravity="start"
        />

    <TextView
        android:id="@+id/enemyMonsterHP"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:gravity="end"
        android:textSize="18sp"
        android:text="HP: XX/XX"
        app:layout_constraintTop_toBottomOf="@id/enemyMonsterName"
        app:layout_constraintEnd_toEndOf="@id/enemyMonsterName"
        />

    <TextView
        android:id="@+id/userMonsterHP"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:gravity="start"
        android:textSize="18sp"
        android:text="HP: XX/XX"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/userMonsterImage"
        app:layout_constraintStart_toEndOf="@id/userMonsterImage"
         />

    <TextView
        android:id="@+id/battleDialog"
        android:layout_width="370dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/userMonsterImage"
        app:layout_constraintStart_toStartOf="@id/userMonsterImage"
        app:layout_constraintEnd_toEndOf="@id/enemyMonsterImage"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="A wild EnemyMonsterName has appeared!\nEnemy Monster uses special attack.\nIt's kinda effective...\nUserMonsterName is hit for XX damage.\nUserMonsterName is ready for action!\nEnemyMonsterName has fainted.\nYou have defeated EnemyMonsterName!"
        />

    <Button
        android:id="@+id/normalAttackButton"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/battleDialog"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/normal_attack"
        />

    <Button
        android:id="@+id/specialAttackButton"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/battleDialog"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="SPECIAL MOVE"
        />

    <Button
        android:id="@+id/switchMonsterButton"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/normalAttackButton"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/switch_monster"
        />

    <Button
        android:id="@+id/runMonsterButton"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/specialAttackButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/run_away"
        />

</androidx.constraintlayout.widget.ConstraintLayout>